resources/assets/styles/layouts/_pages.scss
.page-body {
  &--flex {
    display: flex;
    flex-direction: row;

    @include respond(xs, sm) {
      flex-direction: column-reverse;
    }
  }

  &--content {
    width: calc(100% - 332px);
    position: relative;
    z-index: 1;
    margin-bottom: $golden-ratio-5;

    @include standard-body-link();

    @include respond(xs, sm) {
      width: 100%;
    }

    &.page-body--content-full {
      width: 100%;
    }
  }

  &--aside {
    width: 303px;
    margin-left: $golden-ratio-4;
    position: relative;
    z-index: 3;
    margin-bottom: $golden-ratio-5;

    @include respond(xs, sm) {
      width: 100%;
      margin-right: 0;
      margin-left: 0;
    }
  }
}

